# PurpleTgBot

./: main.py  pyproject.toml
config/: chromadb_client.py  ml.py
utils/: ml.py
